var instead of color, fix double border popout dm

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -109,7 +109,7 @@
 }
 .userPopout-2j1gM4 {
 	border-radius: 3px;
-	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6);
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px var(--deprecated-card-bg);
 }
 .theme-light .userPopout-2j1gM4 {
 	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(186, 188, 191, 0.3);
@@ -169,8 +169,8 @@
 }
 .userPopout-3XzG_A,
 .profileBannerPreview-3mLIdO {
-	-webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6);
-	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6);
+	-webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px var(--deprecated-card-bg);
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px var(--deprecated-card-bg);
 	overflow: hidden;
 	max-height: calc(100vh - 20px);
 }
@@ -246,7 +246,7 @@ div.topSection-1Khgkv > header > svg.bannerSVGWrapper-qc0szY {
 }
 .userPopoutOverlayBackground-dKOOda {
 	margin: 0;
-	/* box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6); */
+	/* box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px var(--deprecated-card-bg); */
 	width: 250px;
 	border-radius: 5px;
 	overflow: hidden;
@@ -358,7 +358,8 @@ div.topSection-1Khgkv > header > div > div:nth-child(1) > div {
 
 .userPopoutOuter-3AVBmJ {
 	width: 250px;
-	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6) !important;
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px var(--deprecated-card-bg) !important;
+	border-radius: px;
 }
 
 .eyebrow-1Shfyi,
@@ -504,3 +505,6 @@ div.customizationSection-IGy2fS.previewProfileThemes-ViDDkq
 	> div:nth-child(1) {
 	margin-top: 90px;
 }
+
+.messageInputContainer-2rGDH8 {
+border:none}
